# ai-office-shared

./: .gitignore  CLAUDE_WORK_PROTOCOL.md  Dockerfile  FAILOVER_ARCHITECTURE.md  REFACTOR_PLAN.md  SYSTEM_STATE.md  failover_chains.yaml  office-roadmap.html  pyproject.toml  requirements.txt
.github/workflows/: emergency-restore-coder-py.yml
agents/: _restore_part1.py  _restore_part10.py  _restore_part2.py  _restore_part3.py  _restore_part4.py  _restore_part5.py  _restore_part6.py  _restore_part7.py  _restore_part8.py  _restore_part9.py  coder.py  weekly_report.py
ai_office_shared/shared/: __init__.py  auth.py  crypto.py  currency.py  dev_activity.py  dev_pipeline.py  elevenlabs.py  failover.py  identity.py  impact_client.py  logging.py  models.py  office.py  ollama.py  prompt.py  quality.py  redis_helpers.py  routing.py  taskboard.py  tasks.py  telegram_safe.py  url_check.py  voice.py  web_search.py  wiki.py
lessons/: INCIDENT_2026-06_silli_401_networkerror.md  _migrations.json  lessons.json
logs/: ops.md
scripts/: fibonacci.py  ollama_switch.py  ops.py  quality_keys_audit.py
shared/: github_tools.py  new_bot_template.py  template_bots.json
skills/claude-code-subagent/: SKILL.md
skills/github-push/: SKILL.md
skills/patch-bot-routing/: SKILL.md
skills/ptb-reactions/: SKILL.md
skills/railway-deploy/: SKILL.md
skills/redis-migration/: SKILL.md
skills/telethon-handlers/: SKILL.md
