[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-office-shared"
version = "0.1.11"
description = "Shared library for AI Office Telegram bots"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "httpx>=0.26.0", "redis>=4.5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_office_shared*"]
exclude = ["agents*", "tests*"]

