[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-office-shared"
version = "0.1.13"
description = "Shared library for AI Office Telegram bots"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_office_shared*"]
exclude = ["agents*", "tests*"]

